// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BrowserBar Normal 1`] = `
<div
  className="flex items-center text-gray-400 text-sm uppercase"
>
  <h3
    className="mr-6 tracking-wider"
  >
    Browse by
  </h3>
  <ul
    className="flex border border-solid border-gray-600 rounded px-1 py-px"
  >
    <li
      className="dropdown-container px-4 py-1 min-w-32 border-r border-solid border-gray-600 last:border-r-0 relative hover:text-white hover:bg-gray-400 hover:rounded-t"
    >
      <p
        className="tracking-wider inline"
      >
        Genre
      </p>
      <svg
        className="inline ml-2 fill-current"
      >
        arrow-down.svg
      </svg>
      <ul
        className="hidden absolute -ml-4 mt-1 px-3 w-full bg-gray-400 border-t border-solid border-gray-600 text-gray-600 capitalize rounded-b py-1 dropdown-content"
      >
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Action"
            onClick={[Function]}
          >
            Action
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Adventure"
            onClick={[Function]}
          >
            Adventure
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Animation"
            onClick={[Function]}
          >
            Animation
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Comedy"
            onClick={[Function]}
          >
            Comedy
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Crime"
            onClick={[Function]}
          >
            Crime
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Documentary"
            onClick={[Function]}
          >
            Documentary
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Drama"
            onClick={[Function]}
          >
            Drama
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Family"
            onClick={[Function]}
          >
            Family
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Fantasy"
            onClick={[Function]}
          >
            Fantasy
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="History"
            onClick={[Function]}
          >
            History
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Horror"
            onClick={[Function]}
          >
            Horror
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Music"
            onClick={[Function]}
          >
            Music
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Mystery"
            onClick={[Function]}
          >
            Mystery
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Romance"
            onClick={[Function]}
          >
            Romance
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Science Fiction"
            onClick={[Function]}
          >
            Science Fiction
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Thriller"
            onClick={[Function]}
          >
            Thriller
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="War"
            onClick={[Function]}
          >
            War
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="Western"
            onClick={[Function]}
          >
            Western
          </a>
        </li>
      </ul>
    </li>
    <li
      className="dropdown-container px-4 py-1 min-w-32 border-r border-solid border-gray-600 last:border-r-0 relative hover:text-white hover:bg-gray-400 hover:rounded-t"
    >
      <p
        className="tracking-wider inline"
      >
        Decade
      </p>
      <svg
        className="inline ml-2 fill-current"
      >
        arrow-down.svg
      </svg>
      <ul
        className="hidden absolute -ml-4 mt-1 px-3 w-full bg-gray-400 border-t border-solid border-gray-600 text-gray-600 capitalize rounded-b py-1 dropdown-content"
      >
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="All"
            onClick={[Function]}
          >
            All
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="2020s"
            onClick={[Function]}
          >
            2020s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="2010s"
            onClick={[Function]}
          >
            2010s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="2000s"
            onClick={[Function]}
          >
            2000s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1990s"
            onClick={[Function]}
          >
            1990s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1980s"
            onClick={[Function]}
          >
            1980s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1970s"
            onClick={[Function]}
          >
            1970s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1960s"
            onClick={[Function]}
          >
            1960s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1950s"
            onClick={[Function]}
          >
            1950s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1940s"
            onClick={[Function]}
          >
            1940s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1930s"
            onClick={[Function]}
          >
            1930s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1920s"
            onClick={[Function]}
          >
            1920s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1910s"
            onClick={[Function]}
          >
            1910s
          </a>
        </li>
        <li
          className="text-sm py-px whitespace-no-wrap hover:text-white"
        >
          <a
            href="/films"
            id="1900s"
            onClick={[Function]}
          >
            1900s
          </a>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="btn btn-primary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="btn btn-secondary"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots FeatureItem Normal 1`] = `
<li>
  <div
    className="flex w-1/3 mb-3 rounded shadow p-5"
  >
    <img
      alt="eye icon"
      className="mr-5 -mt-1 w-10 h-10"
      src={
        Object {
          "ReactComponent": Object {
            "$$typeof": Symbol(react.forward_ref),
            "render": [Function],
          },
          "__esModule": true,
          "default": "eye.svg",
        }
      }
    />
    <p
      className="w-56 text-gray-700 text-sm"
    >
      Some text to describe one of the app features.
    </p>
  </div>
</li>
`;

exports[`Storyshots Features Normal 1`] = `
<div
  className="flex w-240 my-0 mx-auto py-40"
>
  <ul
    className="flex flex-wrap list-none justify-between"
  >
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
    <li>
      <div
        className="flex w-76 mb-4 rounded shadow p-5"
      >
        <img
          alt="Graphic icon of an eye"
          className="mr-5 -mt-1 w-10 h-10"
          src={
            Object {
              "ReactComponent": Object {
                "$$typeof": Symbol(react.forward_ref),
                "render": [Function],
              },
              "__esModule": true,
              "default": "eye.svg",
            }
          }
        />
        <p
          className="w-56 text-gray-700 text-sm"
        >
          Create a watchlist of films to see, and keep track of films you have seen.
        </p>
      </div>
    </li>
  </ul>
</div>
`;

exports[`Storyshots Form Normal 1`] = `
<form
  className="w-1/3 p-8 mx-auto my-0"
  onSubmit={[Function]}
>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="firstname"
    >
      First name
    </label>
    <input
      className="text-input"
      id="firstname"
      name="firstname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="First name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="lastname"
    >
      Last name
    </label>
    <input
      className="text-input"
      id="lastname"
      name="lastname"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Last name"
      type="text"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="email"
    >
      E-mail Address
    </label>
    <input
      className="text-input"
      id="email"
      name="email"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="E-mail Address"
      type="email"
      value=""
    />
  </div>
  <div
    className="flex flex-col mb-4"
  >
    <label
      className=""
      htmlFor="password"
    >
      Password
    </label>
    <input
      className="text-input"
      id="password"
      name="password"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Password"
      type="password"
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Try Me
  </button>
</form>
`;

exports[`Storyshots Form/FormInput Err 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className="text-red-600"
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input border-red-600"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  <span
    className="text-red-600"
  >
    This field is required.
  </span>
</div>
`;

exports[`Storyshots Form/FormInput Password 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Form/FormInput Text 1`] = `
<div
  className="flex flex-col mb-4"
>
  <label
    className=""
    htmlFor="test"
  >
    Test
  </label>
  <input
    className="text-input"
    id="test"
    name="test"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Test the input by typing something here"
  />
  
</div>
`;

exports[`Storyshots Header Normal 1`] = `
<header
  className="h-16 relative z-10"
  style={
    Object {
      "backgroundColor": "rgba(0,0,0,0.25)",
    }
  }
>
  <div
    className="flex w-240 my-0 mx-auto h-full items-center justify-between"
  >
    <div
      className="mr-20 px-3 py-1 text-gray-400"
    >
      LOGO
    </div>
    <nav
      className="flex w-2/3"
    >
      <ul
        className="flex"
      >
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/films"
            onClick={[Function]}
          >
            Films
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/tv-shows"
            onClick={[Function]}
          >
            TV-shows
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/people"
            onClick={[Function]}
          >
            People
          </a>
        </li>
        <li>
          <a
            className="px-3 py-1 text-gray-400"
            href="/discussions"
            onClick={[Function]}
          >
            Discussions
          </a>
        </li>
      </ul>
      <ul
        className="flex"
      >
        <button
          className="btn btn-primary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Create Account
        </button>
        <button
          className="btn btn-secondary"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Log In
        </button>
      </ul>
    </nav>
  </div>
</header>
`;

exports[`Storyshots Hero Normal 1`] = `
<div
  className="flex justify-center content-center h-168 bg-center bg-no-repeat -mt-16"
  style={
    Object {
      "backgroundImage": "linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(watchingtv.jpg)",
    }
  }
>
  <div
    className="flex w-240 my-0 mx-auto flex-col justify-center text-center"
  >
    <h1
      className="text-4xl font-bold leading-tight text-gray-200"
    >
      Save shows and movies you want to watch.
      <br />
      Track what you have watched.
      <br />
      Share with your friends what is worth watching.
    </h1>
    <button
      className="btn btn-primary flex justify-around w-48 mx-auto mt-10 tracking-wide text-xl"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Get Started
      <svg
        className="bg-white rounded-full p-1 self-center"
        title="arrow icon"
      >
        arrow.svg
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots NavItem Normal 1`] = `
<li>
  <a
    className="px-3 py-1 text-gray-600"
    href="/default/"
    onClick={[Function]}
  >
    Default
  </a>
</li>
`;

exports[`Storyshots ResetPasswordLink Normal 1`] = `
<a
  className="text-xs"
  href="/reset-password"
  onClick={[Function]}
>
  Forgot my password
</a>
`;

exports[`Storyshots SearchBar Normal 1`] = `
<form
  className="flex text-gray-400 text-sm uppercase"
  onSubmit={[Function]}
>
  <div
    className="flex items-center"
  >
    <label
      className=""
      htmlFor="title"
    >
      Or Search By Title
    </label>
    <input
      className="text-input mt-0 bg-gray-800 ml-6 mr-3"
      id="title"
      name="title"
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Title"
      type="text"
      value=""
    />
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Storyshots TopNav Logged In 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/profile"
        onClick={[Function]}
      >
        My Profile
      </a>
    </li>
    <li>
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Log Out
      </button>
    </li>
  </ul>
</nav>
`;

exports[`Storyshots TopNav Logged Out 1`] = `
<nav
  className="flex w-2/3"
>
  <ul
    className="flex"
  >
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/films"
        onClick={[Function]}
      >
        Films
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/tv-shows"
        onClick={[Function]}
      >
        TV-shows
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/people"
        onClick={[Function]}
      >
        People
      </a>
    </li>
    <li>
      <a
        className="px-3 py-1 text-gray-400"
        href="/discussions"
        onClick={[Function]}
      >
        Discussions
      </a>
    </li>
  </ul>
  <ul
    className="flex"
  >
    <button
      className="btn btn-primary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Create Account
    </button>
    <button
      className="btn btn-secondary"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Log In
    </button>
  </ul>
</nav>
`;
